--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+---
+---
+
+@import
+  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+  "minima/initialize";
+
+
+
+
 @font-face {
     font-family: a;
     src: url(sf-pro-display_regular.ttf);
